# ncnn

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: linux-aarch64.yml  linux-x64-cpu-gcc.yml
cmake/: ncnn_tools.cmake
demo/: CMakeLists.txt  demo_config.h.in  squeezenet.cpp  test.cpp
docs/: 推理框架设计.md  设计模式.md
examples/: CMakeLists.txt  squeezenet.cpp  yolov3.cpp
src/: CMakeLists.txt  allocator.cpp  allocator.h  cpu.cpp  datareader.cpp  datareader.h  layer.cpp  layer.h  mat.cpp  mat.h  mat_pixel.cpp  mat_pixel_drawing.cpp  modelbin.cpp  modelbin.h  net.cpp  net.h  option.cpp  option.h  paramdict.cpp  paramdict.h  platform.h.in  stb_image.h
src/layer/: binaryop.cpp  concat.cpp  convolution.cpp  convolutiondepthwise.cpp  deconvolutiondepthwise.cpp  dropout.cpp  eltwise.cpp  innerproduct.cpp  pooling.cpp  relu.cpp  relu.h  softmax.cpp  split.cpp  yolov3detectionoutput.cpp  yolov3detectionoutput.h
src/layer/arm/: arm_usability.h  deconvolutiondepthwise_arm.cpp  dropout_arm.cpp  eltwise_arm.cpp  neon_mathfun.h  pooling_arm.cpp  pooling_arm.h  relu_arm.cpp  relu_arm.h  softmax_arm.cpp  softmax_arm.h
src/layer/riscv/: relu_riscv.cpp  relu_riscv.h
src/layer/x86/: avx512_mathfun.h  avx_mathfun.h  relu_x86.cpp  relu_x86.h  softmax_x86.cpp  softmax_x86.h  sse_mathfun.h  x86_usability.h
tests/: CMakeLists.txt
tests/common/: testutil.cpp  testutil.h
tests/llt/: test_relu.cpp  test_squeezenet.cpp
